@@ -16,6 +16,25 @@ if [ ! -d $AUGUSTUS_CONFIG_PATH ]; then
     export AUGUSTUS_CONFIG_PATH=$(find /accessoryfiles -name config -type d  -printf "%p")
 fi;
 
+if command -v qualimap >/dev/null 2>&1; then
+    sed -i 's/-XX:MaxPermSize=1024m"/-XX:MaxPermSize=1024m -Djava.awt.headless=true"/' $(which qualimap)
+fi;
+
+if [ ! command -v samtools >/dev/null 2>&1 ]; then
+    cd /accessoryfiles/samtools*/htslib*/
+    make clean
+    ./configure
+    make CPPFLAGS="-D_FILE_OFFSET_BITS=64 -D_LARGEFILE64_SOURCE"
+    cd ..
+    make clean
+    ./configure --without-curses
+    make DFLAGS="-D_FILE_OFFSET_BITS=64 -D_LARGEFILE64_SOURCE"
+fi;
+
+for h in /accessoryfiles/*/ITSx_db/HMMs/*.hmm; do
+    hmmpress ${h} >/dev/null 2>&1;
+done
+
 
 if [ "$1" = "assemble" ]; then
 
@@ -40,14 +59,18 @@ if [ "$1" = "assemble" ]; then
     if [ -n "$BASIC" ]; then
         ARG+=" -b $BASIC"
     fi
+    if [ -n "$FASTQ" ]; then
+        ARG+=" -F"
+    fi
+    if [ -n "$CLADE" ]; then
+        ARG+=" --clade $CLADE"
+    fi
     if [ -z "$IN" ]; then
         ARG+=" /data"
     else
         ARG+=" $IN"
     fi
-    if [ -n "$CLADE" ]; then
-        ARG+=" --clade $CLADE"
-    fi
+
 
     echo $ARG
     exec MBBspades $ARG
